# string_essentials

./: CMakeLists.txt  README.md
include/string_essentials/: string_essentials.hpp
src/: string_essentials.cpp
test/: CMakeLists.txt  unittest.cpp
